[package]
name = "textstream"
description = "Text reader for non-UTF8 encoded text."
documentation = "https://gyu-don.github.io/rust-textstream/textstream/"
homepage = "https://github.com/gyu-don/rust-textstream"
repository = "https://github.com/gyu-don/rust-textstream"
version = "0.1.1"
authors = ["gyu-don <takumi.kt+git@gmail.com>"]
license = "MIT"
include = [
    "Cargo.toml",
    "**/*.rs",
]
keywords = ["encoding", "charset"]

[dependencies]
encoding = "0.2.33"
memchr = "1.0.1"
